[project]
name = "stock-analyst"
version = "0.1.0"
description = "Personal Company Analysis tool: Streamlit UI + FastAPI backend with earnings reaction analyzer."
readme = "README.md"
requires-python = ">=3.11,<3.13"        
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "httpx==0.27.2",
    "tenacity==8.2.3",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.0",
    "streamlit==1.38.0",
    "yfinance>=0.2.65",
    "pandas==2.2.2",
    "numpy==1.26.4",
    "plotly==5.24.1",
    "feedparser==6.0.11",
    "python-dotenv==1.0.1",
    "duckdb==1.0.0",
    "curl_cffi>=0.7.3"
]

[tool.uv]
dev-dependencies = [
    "pytest==8.3.2",
    "pytest-asyncio==0.23.8",
    "ruff==0.6.8",
    "mypy==1.11.2",
    "requests==2.32.3"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
strict_optional = true
